module12/istio-specs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpsserver
spec:
  gateways:
    - httpsserver
  hosts:
    - istio.httpserver.com
  http:
    - match:
      - port: 443
        uri:
          exact: "/api/"
      rewrite:
        uri: "/"  # rewrite转发
      route:
        - destination:
            host: httpserver.learning.svc.cluster.local
            port:
              number: 80
    - match:
        - port: 443
          uri:
            prefix: "/front/" # 前端~nginx
      rewrite:
        uri: "/"
      route:
        - destination:
            host: nginx.default.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpsserver
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - istio.httpserver.com
      port:
        name: https-default
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: istio-httpserver-com-credential
